--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,31 @@
 # ===== Data Handling ===== 
-numpy==1.26.4
-pandas==2.2.2
-joblib==1.3.2
-
-# ===== Visualization =====
-matplotlib==3.8.4
-seaborn==0.13.2
-plotly==5.18.0
-shap==0.46.0
-
+numpy==1.26.4 
+pandas==2.2.2 
+scipy==1.15.3 
+joblib==1.5.2 
+# ===== Visualization ===== 
+matplotlib==3.10.7 
+seaborn==0.13.2 plotly # (For interactive dashboards in app.py) 
+shap # SHAP Explainability for ML models 
 # ===== NLP =====
 vaderSentiment==3.3.2
-nltk==3.9.1
-
-# ===== Machine Learning =====
-scikit-learn==1.5.1
-xgboost==2.0.3
-
-# ===== Deep Learning =====
-tensorflow-cpu==2.17.0
-keras>=3.0.0
-
-# ===== Web App =====
-streamlit
-streamlit-option-menu
-streamlit-shap
-
-# ===== Utilities =====
-python-dotenv
-Pillow
-openpyxl
-reportlab==4.2.0
+nltk==3.9.1 
+transformers==4.44.2 
+# ===== Machine Learning ===== 
+scikit-learn==1.7.2 
+xgboost==3.1.0 
+# ===== Deep Learning ===== 
+tensorflow==2.14.0 
+keras==2.14.0 # WEB APP (Streamlit) 
+streamlit 
+streamlit-option-menu # sidebar navigation 
+streamlit-authenticator # login + role-based access 
+streamlit-shap # SHAP integration with Streamlit 
+# UTILITIES
+python-dotenv # for .env files (API keys / paths) 
+Pillow # image support 
+openpyxl # batch prediction (Excel/XLSX input) 
+reportlab # PDF generation
 
 # telco_env\Scripts\activate
 # streamlit run app.py
